--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "@types/node": "^20.12.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "axios": "^1.6.8"
   }
 }
